src/styles/tanzania/chapter1.scss
body{
  overflow-x: hidden;
}

.section-container{
    scroll-snap-type: y mandatory;
    scroll-snap-stop: always;
    overflow-y: scroll;
    height: 100vh;
    background: white;
    // display: contents;
    // -ms-overflow-style: none;
    // scrollbar-width: none;
    color: black;
  }
  
  
  .section-container::-webkit-scrollbar {
    display: none;
  }
  
  .sections{
    display: flex;
    scroll-snap-align: start;
    height: 100vh;
    width: 100%;
    // justify-content: center;
    // align-items: center;
    margin: 0;
  }


  .dots-container{
    background-image: url(../../images/tanzaniaImages/dots.png);
    background-size: cover;
    // background-size: contain;
    background-repeat: no-repeat;
    height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
  }

  .breakdown-container{
    // background-image: url(../../images/tanzaniaImages/umbreakdown1.png);
    // background-size: contain;
    // background-repeat: no-repeat;
    height: 100vh;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .umImg-container{
    max-width: 60%;
    height: 100%;
    img{
        max-width: 100%;
        height: 100%;
        object-fit: contain;
    }
  }

  .leftSide-names{
    width: 20%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    text-align: right;
  }

  .right-side{
    text-align: left;
  }

  .umoja-container{
    background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: flex-end;
    background-color: white;
  }

  .container-hide{
    display: none;
  }

  .umojaText-container{
    // position: absolute;
    width: 25%;
    height: 100%;
    background-color: white;
    margin-right: 5%;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: justify;
    p{
       margin: 20% 17%;
       font-size: 10px;  
    }
  }

  .umojaSchool-container{
    // position: absolute;
    width: 20%;
    height: 100%;
    background-color: white;
    // margin-right: 5%;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: justify;
    p{
       margin: 20% 17%;
       font-size: 12px;  
    }
  }

  .timetable{
    display: flex;
    flex-direction: column;
    align-items: flex-end;
  }

  .timetable-container{
    display: flex;
  }


  .umTimetable-container{
    width: 70%;
    display: flex;
    align-items: center;
    justify-content: center; 
    img{
        height: 70%;
        width: 70%;
        object-fit: contain;
    }   // top: 0%;
  }

  .umFarm{
    background-image: url(../../images/tanzaniaImages/umfarm.png);
    background-size: cover;
  }

  .umPlayground{
    background-image: url(../../images/tanzaniaImages/umPlayground.png);
    background-size: cover;
  }

  .School{
    background-image: url(../../images/tanzaniaImages/school.png);
    justify-content: space-between;
    background-size: cover;
  }

  .HQ{
    background-image: url(../../images/tanzaniaImages/umojaHQ.png);
    background-size: cover;
  }



  // ALL VIDEOS

  video{
    width: 100%;
    height: 100% !important;
    object-fit: cover;
    }

  .video-wrapper{
    background-color: black;
    width: 100%;
    height: 100%;
    // max-width: 700px;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
  }

  button{
    background: none;
    border: none;
    color: white;
    padding: 0;
    
    font-size: 1.1rem;
  }

  .mute-btn{
    position: absolute;
    bottom: 0%;
    right: 0%;
    height: 30px;
    width: 30px;
  }

  .umVideo-container{
    width: 100%;
    height: 100%;
  }

  .togglePlay-container{
    position: absolute;
    top: 45%;
    height: 80px;
    width: 80px;
    
  }



// carosel
.carosel-container{
  overflow: hidden;
  overflow-x: auto;
  display: flex;
  // flex-direction: column;
  align-items: center;
  width: 100%;
  height: 100%;
}

.card-container{
  display: flex;
  width: 100%;
  height: 100%;

}

.cardImg{
  min-height: 100%;
  min-width: 100%;
  

  img{
    width: 100%;
    height: 100%;
  }
}



  @media (min-width: 81em) {
    .umoja-container{
      background-size: cover;
    }

    .umojaSchool-container{
      p{
        //  margin: 20% 17%;
         font-size: 14px;  
      }
    }

    .umojaText-container{
      p{
         font-size: 14px;  
      }
    }
  }

